<resources>
    <!-- Activity labels -->
    <string name="app_name">Little Twitter</string>

    <!-- Strings related to login -->
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_home">Home</string>

    <!-- Strings related to home -->
    <string name="my_posts">My Posts</string>

    <!-- misc -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile_picture">profile_picture</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="add">add</string>
    <string name="show_all">show all</string>
    <string name="add_post">Add Post</string>
    <string name="add_comment">Add Comment</string>
    <string name="new_comment">write a comment</string>

    <string name="new_post">Write Post here</string>
    <string name="add_post_button">Add Post</string>

    <string name="search_hint">Search Here</string>
    <string name="image">image</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="search_people">Search people</string>
    <string name="view_posts">View Posts</string>
    <string name="toggle_follow">Toggle Follow</string>
    <string name="user_posts">User Posts</string>
    <string name="cancel">cancel</string>
</resources>
