<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_post"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/add_post" />
        <item
            android:id="@+id/my_posts"
            android:icon="@drawable/ic_explore_white_24dp"
            android:title="@string/my_posts" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_visibility_off_white_24dp"
            android:title="@string/sign_out" />
    </group>
</menu>
