<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    tools:context="org.littletwitter.littletwitter.activities.AddPost">

    <ProgressBar
        android:id="@+id/add_post_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/add_post_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_post_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/new_post"/>

            <ImageView
                android:id="@+id/add_post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:scaleType="center"
                android:layout_below="@id/add_post_data"
                android:contentDescription="@string/image" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_post_image_button"
                android:layout_below="@id/add_post_image"
                android:layout_marginTop="8dp"
                android:text="Add Photo"
                android:textStyle="normal"/>

            <Button
                android:id="@+id/add_post_button"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_post_image_button"
                android:layout_marginTop="16dp"
                android:text="@string/add_post_button"
                android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
